<?xml version="1.0" encoding="utf-8"?>

<!--

뷰(View)들을 서로 상대적으로 배치
각 뷰가 다른 뷰나 부모 레이아웃에 대해 상대적인 위치를 지정할 수 있어 유연하게 UI를 구성
한 뷰를 부모 레이아웃의 왼쪽에 맞추거나 다른 뷰의 오른쪽에 배치하는 등의 위치 지정이 가능

layout_centerInParent="true" 속성을 사용하면 해당 뷰는 부모 레이아웃의 중앙에 배치

layout_alignParentLeft: 부모의 왼쪽에 맞추기
layout_alignParentTop: 부모의 상단에 맞추기
layout_below: 다른 뷰 아래에 배치
layout_toRightOf: 다른 뷰의 오른쪽에 배치

뷰 간의 관계 설정:
뷰가 서로 수평/수직으로 정렬될 수 있습니다. 예를 들어,
한 뷰가 다른 뷰의 오른쪽에 위치하게 하거나, 아래에 위치하게 할 수 있습니다.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_title"
        android:textSize="20sp"
        android:id="@+id/pageTitleTextView"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goodProgrammerCheckbox"
        android:text="@string/good_programmer_checkbox_text"
        android:layout_below="@id/pageTitleTextView"
        android:onClick="onCheckGoodProgrammer"
        />

    <!--
    android:layout_margin="20dp":
    뷰의 모든 방향(상, 하, 좌, 우)에 대해 20dp의 여백을 설정합니다.
    즉, 해당 뷰는 주변의 다른 뷰나 부모 레이아웃과 20dp 만큼의 간격
    -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doItButton"
        android:text="@string/do_it"
        android:layout_below="@id/goodProgrammerCheckbox"
        android:layout_margin="20dp"
        android:onClick="onBtnDoIt"
        />

    <!--
    margin은 뷰의 외부 여백을 설정합니다.
    즉, 뷰와 다른 뷰 또는 부모 레이아웃 사이의 간격을 설정하는 것

    padding은 뷰의 내부 여백을 설정합니다.
    즉, 뷰의 내용(텍스트, 이미지 등)과 뷰의 경계 사이의 간격을 설정하는 것

    🔘 안드로이드의 Switch 위젯에서 기본적으로:
	오른쪽이 "ON" (켜짐) 상태
	왼쪽이 "OFF" (꺼짐) 상태

	android:layout_alignParentRight="true"
    설명: 이 속성은 뷰를 부모 레이아웃의 오른쪽 끝에 정렬

    android:layout_toRightOf="@id/doItButton"
    설명: 이 속성은 현재 뷰를 다른 뷰(doItButton)의 오른쪽에 배치

    android:layout_alignBaseline="@id/doItButton"
    설명: 이 속성은 현재 뷰의 기준선(baseline)을 doItButton 뷰의 기준선과 맞추도록 설정
	-->
    <Switch
        android:id="@+id/immediateSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/doItButton"
        android:layout_alignBaseline="@id/doItButton"

        android:padding="20dp"
        android:background="#00BCD4"
        android:text="@string/apply_immediately"
        />

    <!--
     layout_below="@id/immediateSwitch":
     이 속성은 EditText를 immediateSwitch라는 다른 뷰의 바로 아래에 배치하도록 합니다.
     immediateSwitch의 바로 아래에 이 EditText가 배치되게 합니다.

    layout_alignStart="@id/immediateSwitch": 이 속성은
    EditText의 시작 지점(왼쪽)을 immediateSwitch의 시작 지점에 정렬시킵니다.
    즉, immediateSwitch와 수평으로 왼쪽 정렬이 됩니다.
     -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/immediateSwitch"
        android:layout_alignStart="@id/immediateSwitch"
        android:hint="@string/noname"
        />

    <!--
    layout_toStartOf="@id/nameEditText":
    이 속성은 TextView를 nameEditText 뷰의 왼쪽에 배치합니다.
    즉, nameEditText의 시작 지점(왼쪽)을 기준으로 TextView가 배치

    layout_alignBaseline="@id/nameEditText":
    이 속성은 TextView와 nameEditText의 기준선(텍스트 기준선)을 맞추도록 합니다.
    즉, nameEditText의 텍스트 기준선에 맞춰서 TextView가 배치됩니다.

    gravity="end": TextView의 텍스트가 오른쪽 정렬되도록 설정합니다.
    gravity는 텍스트의 정렬 방식을 지정하는 속성
    -->
    <TextView
        android:labelFor="@id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/nameEditText"
        android:layout_alignBaseline="@id/nameEditText"
        android:gravity="end"
        android:textSize="16sp"
        android:text="@string/your_name"
        android:background="#FF9800"
        />

    <LinearLayout
        android:id="@+id/seekbarGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Money"
            />

        <!-- progress="1000":
        SeekBar의 초기 진행 상태(progress)를 1000으로 설정합니다.
        SeekBar의 슬라이더가 초기 상태에서 1000에 위치
        -->
        <SeekBar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/moneySeekBar"
            android:min="10"
            android:max="10000"
            android:progress="1000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moneyValueTextView"
            android:text="$100"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paintControlGroup"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekbarGroup"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#cff"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Width:"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radioWidthThin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thin"
                    android:onClick="onRadioWidth"
                    />
                <RadioButton
                    android:id="@+id/radioWidthMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium"
                    android:onClick="onRadioWidth"
                    />
                <RadioButton
                    android:id="@+id/radioWidthThick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thick"
                    android:onClick="onRadioWidth"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#ffc"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cap:"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radioCapButt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Butt"
                    android:onClick="onRadioCap"
                    />
                <RadioButton
                    android:id="@+id/radioCapRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Round"
                    android:onClick="onRadioCap"
                    />
                <RadioButton
                    android:id="@+id/radioCapSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Square"
                    android:onClick="onRadioCap"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#fcf"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Join:"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radioJoinBevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bevel"
                    android:onClick="onRadioJoin"
                    />
                <RadioButton
                    android:id="@+id/radioJoinMiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Miter"
                    android:onClick="onRadioJoin"
                    />
                <RadioButton
                    android:id="@+id/radioJoinRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Round"
                    android:onClick="onRadioJoin"
                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <kr.ac.tukorea.ge.scgyong.spgp2025.morecontrols.MyView
        android:id="@+id/myView"
        android:layout_below="@id/paintControlGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        />

</RelativeLayout>